# wrench-board

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
api/: __init__.py  config.py  logging_setup.py  main.py  ws_security.py
api/agent/: __init__.py  _session_mirrors.py  board_state.py  chat_history.py  conversation_log.py  diagnosis_log.py  dispatch_bv.py  field_reports.py  macros.py  managed_ids.py  manifest.py  measurement_memory.py  memory_seed.py  memory_stores.py  pricing.py  recovery_state.py  reliability.py  runtime_direct.py  runtime_managed.py  sanitize.py  schematic_boardview_bridge.py  session_start_mode.py  tool_dispatch.py  tools.py  validation.py
api/board/: __init__.py  events.py  model.py  render.py  router.py  validator.py
api/pipeline/: __init__.py  auditor.py  coverage.py  drift.py  events.py  expansion.py  graph_transform.py  intent_classifier.py  mapper.py  models.py  orchestrator.py  phase_narrator.py  prompts.py  registry.py  schemas.py  scout.py  sources.py  subsystem.py  tool_call.py  writers.py
api/profile/: catalog.py  (+7 more)
benchmark/: agent_scenarios.jsonl  scenarios.jsonl  weaknesses.md
board_assets/: ATTRIBUTIONS.md
docs/: ARCHITECTURE.md  EVOLVE.md  HACKATHON.md
scripts/: analyze_mount_usage.py  bench_agent_flow.py  bench_agentic_vision.py  bench_baseline_variance.py  bench_hypothesize.py  bench_memory.py  bench_simulator.py  bootstrap_managed_agent.py  build_benchmark_corpus.py  cleanup_managed_agents.py  doctor.py  dump_tools_inventory.py  eval_all.py  eval_diagnostic_agent.py  eval_pipeline.py  eval_pipeline_vision.py  eval_simulator.py  evolve-bootstrap.sh  evolve-runner.sh  gen_hypothesize_benchmarks.py  generate_bench_from_pack.py  poc_pipeline_multi_agent.py  probe_multi_agent_diagnostic.py  purge_oversized_seeds.py  regen_electrical_graph.py  reset_demo.py  scan_board_corpus.py  seed_global_memory_stores.py  smoke_curator.py  smoke_expand_pack.py  smoke_files_vision.py  smoke_layered_memory.py  smoke_mount_sync.py  smoke_multi_session_scribe.py  smoke_session_log.py  smoke_subagent.py  smoke_test_optimizations.py  start.sh  tune_hypothesize_weights.py
tests/: conftest.py
web/: app.js  brd_viewer.js  index.html  llm_panel.html  profil.html  style.css
(+403 files in other folders)
